{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 36,
  "lineage": "1b465a0c-6146-b5f6-e6dd-cd9192afaa04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chillipharm_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6b0058f1dc2eece",
            "association_id": "eipassoc-0b864a7e8ff364cd2",
            "domain": "vpc",
            "id": "eipalloc-0e6b0058f1dc2eece",
            "instance": "i-0ea8d969c1cf8ec31",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bb2549238e94d6a8",
            "private_dns": "ip-10-1-0-209.ec2.internal",
            "private_ip": "10.1.0.209",
            "public_dns": "ec2-34-206-49-217.compute-1.amazonaws.com",
            "public_ip": "34.206.49.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chillipharm_eip"
            },
            "tags_all": {
              "Name": "chillipharm_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.chillipharm_instance",
            "aws_key_pair.chillipharm_key",
            "aws_security_group.chillipharm_sg",
            "aws_subnet.chillipharm_subnet",
            "aws_vpc.chillipharm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chillipharm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc5d935ebf8bc3bc",
            "arn": "arn:aws:ec2:us-east-1:631308762149:instance/i-0ea8d969c1cf8ec31",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea8d969c1cf8ec31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "chillipharm-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bb2549238e94d6a8",
            "private_dns": "ip-10-1-0-209.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.209",
            "public_dns": "ec2-18-206-219-92.compute-1.amazonaws.com",
            "public_ip": "18.206.219.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03218fd5444eb6347",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051d47f9b24ac2fa8",
            "tags": {
              "Name": "chillipharm_instance"
            },
            "tags_all": {
              "Name": "chillipharm_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0817e972028ae5269"
            ]
          },
          "dependencies": [
            "aws_key_pair.chillipharm_key",
            "aws_security_group.chillipharm_sg",
            "aws_subnet.chillipharm_subnet",
            "aws_vpc.chillipharm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "chillipharm_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631308762149:internet-gateway/igw-0548568fe7d6de93d",
            "id": "igw-0548568fe7d6de93d",
            "owner_id": "631308762149",
            "tags": {
              "Name": "chillipharm_gw"
            },
            "tags_all": {
              "Name": "chillipharm_gw"
            },
            "vpc_id": "vpc-044c78ef005de3ed0"
          },
          "dependencies": [
            "aws_vpc.chillipharm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "chillipharm_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631308762149:route-table/rtb-066e37a10d829eb65",
            "id": "rtb-066e37a10d829eb65",
            "owner_id": "631308762149",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0548568fe7d6de93d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chillipharm_route_table"
            },
            "tags_all": {
              "Name": "chillipharm_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-044c78ef005de3ed0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.chillipharm_gw",
            "aws_vpc.chillipharm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "chillipharm_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0732b953ce7ebe0e9",
            "route_table_id": "rtb-066e37a10d829eb65",
            "subnet_id": "subnet-051d47f9b24ac2fa8"
          },
          "dependencies": [
            "aws_internet_gateway.chillipharm_gw",
            "aws_route_table.chillipharm_route_table",
            "aws_subnet.chillipharm_subnet",
            "aws_vpc.chillipharm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chillipharm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631308762149:security-group/sg-0817e972028ae5269",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0817e972028ae5269",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231119224801345600000001",
            "name_prefix": "terraform-",
            "owner_id": "631308762149",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg"
            },
            "tags_all": {
              "Name": "my_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-044c78ef005de3ed0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.chillipharm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "chillipharm_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631308762149:subnet/subnet-051d47f9b24ac2fa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051d47f9b24ac2fa8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "631308762149",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chillipharm_subnet"
            },
            "tags_all": {
              "Name": "chillipharm_subnet"
            },
            "vpc_id": "vpc-044c78ef005de3ed0"
          },
          "dependencies": [
            "aws_vpc.chillipharm_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "chillipharm_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:631308762149:vpc/vpc-044c78ef005de3ed0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0484b7f6a5dc265eb",
            "default_route_table_id": "rtb-0d59fba88e606d430",
            "default_security_group_id": "sg-016f91b4b3ee853ed",
            "dhcp_options_id": "dopt-0bed5a71",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044c78ef005de3ed0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d59fba88e606d430",
            "owner_id": "631308762149",
            "tags": {
              "Name": "chillipharm_vpc"
            },
            "tags_all": {
              "Name": "chillipharm_vpc"
            }
          }
        }
      ]
    }
  ]
}